# coding_sites

./: README.md
code_academy/c++/block_letters/: initials.cpp
code_academy/python/: test.py
code_academy/python/coded_correspondence/: coded_correspondence.ipynb
code_academy/python/hacking_the_fender/: new_passwords.csv  script.py
code_academy/python/scrabble/: scrabble.py
code_academy/python/thread_shed/: thread_shed.py
code_academy/sql/analyze_hacker_news_trends/: project-4.sqlite
code_academy/sql/create_a_table/: project-1.db  project-1.sqlite
code_academy/sql/lyft_trip_data/: project-4.sqlite
code_academy/sql/new_york_restaurants/: project-2.sqlite
code_academy/sql/trends_in_startups/: project-3.sqlite
code_competitions/: .gitignore
code_competitions/codewars/C#/AreYouPlayingBanjo/: prog.cs
code_competitions/codewars/C#/BitCounting/: prog.cs
code_competitions/codewars/C#/CenturyFromYear/: prog.cs
code_competitions/codewars/C#/FindMaxMinList/: prog.cs
code_competitions/codewars/C#/JadenCasingStrings/: prog.cs
code_competitions/codewars/C#/OppositeNumber/: prog.cs
code_competitions/codewars/C#/ReplaceWithAlphaPosition/: prog.cs
code_competitions/codewars/C#/ReverseWords/: Program.cs  ReverseWords.sln
code_competitions/codewars/C#/TransportationOnVacation/: prog.cs
code_competitions/codewars/C++/Beeramid/: CMakeLists.txt  beeramid.cpp  beeramid.hpp  beeramid_test.cc
code_competitions/codewars/C++/CanYouCountDivisors/: prog.cpp
code_competitions/codewars/C++/ConvertNumToRevArray/: prog.cpp
code_competitions/codewars/C++/ConvertStringToNum/: prog.cpp
code_competitions/codewars/C++/DivideIntAsStr/: input.txt  prog.cpp  prog1.cpp  prog2.cpp  prog3.cpp
code_competitions/codewars/C++/GrowthOfAPopulation/: prog.cpp
code_competitions/codewars/C++/Isograms/: prog.cpp
code_competitions/codewars/C++/TwiceLinear/: prog.cpp  prog1.cpp
code_competitions/codewars/C/Array.diff/: CMakeLists.txt
code_competitions/codewars/C/Array.diff/src/: array_diff.c  array_diff.h
code_competitions/codewars/C/Array.diff/tests/: test_array_diff.cc
code_competitions/codewars/C/ConvertStringToCamelCase/: CMakeLists.txt
code_competitions/codewars/C/ConvertStringToCamelCase/src/: to_camel_case.c  to_camel_case.h
code_competitions/codewars/C/ConvertStringToCamelCase/tests/: test_to_camel_case.cc
code_competitions/codewars/C/DNAtoRNAConversion/: prog.c
code_competitions/codewars/C/IPValidation/: CMakeLists.txt  README.md
code_competitions/codewars/C/IPValidation/benchmarks/: benchmark.c  test_ips.h
code_competitions/codewars/C/IPValidation/src/: is_valid_ip.c  is_valid_ip.h
code_competitions/codewars/C/IPValidation/tests/: test_is_valid_ip.cc
code_competitions/codewars/python/CalculatingWithFunctions/: main.py
code_competitions/codewars/python/MovingZerosToTheEnd/: main.py
code_competitions/codewars/python/Snail/: main.py
code_competitions/codewars/python/TheIfFunction/: main.py
code_competitions/codewars/sql/sqlBasics_simpleDistinct/: solution.sql
code_competitions/codewars/sql/sqlBasics_simpleMinMax/: solution.sql
code_competitions/leetcode/python/: pyproject.toml
code_competitions/leetcode/python/118_pascals_triangle/: main.py
code_competitions/leetcode/python/1512_number_of_good_pairs/: main.py
code_competitions/leetcode/python/2423_remove_letter_to_equalize_frequency/: main.py
code_competitions/leetcode/python/3289_the_two_sneaky_numbers/: main.py
ctf/otw/: bandit.md  bandit.txt
ctf/otw_advent2019/day1/: decoder.c
ctf/picoCTF/GuessingGame1/: script.py
purescript-book/exercises/chapter4/test/: Main.purs  (+1 more)
(+33 files in other folders)
